--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="home__container container grid">
                     <div class="home__content grid">
                         <div class="home__social">
-                            <a href="https://github.com/" target="_blank" class="home__social-icon">
+                            <a href="https://github.com/darilpratomo" target="_blank" class="home__social-icon">
                                 <i class="uil uil-github-alt"></i>
                             </a>
 
