--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="#" class="nav__logo">Daril</a>
+                <img src="assets/img/logo daril white tooth.png" alt="" width="150px">
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list grid">
@@ -999,8 +999,7 @@
             <div class="footer__bg">
                 <div class="footer__container container grid">
                     <div>
-                        <h1 class="footer__title">Darilverse</h1>
-                        <span class="footer__subtitle">Personal Website - Darilverse</span>
+                        <img src="assets/img/logo daril white atasan.png" alt="" width="200px">
                     </div>
 
                     <ul class="footer__links">
@@ -1028,7 +1027,7 @@
                     </div>
                 </div>
 
-                <p class="footer__copy">&#169; Darilverse. All right reserved</p>
+                <p class="footer__copy">&#169; Daril Pratomo. All right reserved</p>
             </div>
         </footer>
         
